<resources>
    <string name="tab_scene">Ngữ cảnh</string>
    <string name="detect_acttion">Phát hiện chuyển động</string>
    <string name="detect_hi_title">Phát hiện người</string>
    <string name="detect_hi">Phát hiện có người tại %s vào %s</string>
    <string name="detect_motion">Phát hiện có chuyển động tại %s vào %s</string>
    <string name="user">Người dùng</string>
    <string name="tab_favorite_title">Yêu thích</string>
    <string name="repeat_later">Nhắc lại sau</string>
    <string name="default_notification_channel_id">VHome</string>
    <string name="text_empty" />
    <string name="ok">OK</string>
    <string name="ok_title">Đồng ý</string>
    <string name="ok_title_private_policy">TÔI ĐÃ HIỂU</string>
    <string name="cancel">Huỷ bỏ</string>
    <string name="cancel_title">Thoát</string>
    <string name="refuse">Từ chối</string>
    <string name="agree">Chấp nhận</string>
    <string name="understand">Đã hiểu</string>
    <string name="setting">Cài đặt</string>
    <string name="always_on">Luôn bật</string>
    <string name="support">Hỗ trợ</string>
    <string name="guid_to_use_app">このアプリの使い方</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="app_info">アプリの情報</string>
    <string name="version">バージョン</string>
    <string name="term_of_service">利用規約</string>
    <string name="not_connected_internet">ネットワーク接続をご確認ください。</string>
    <string name="bulk_packing">一括パッキング</string>
    <string name="password_is_provided_one_time_use_only">Mật khẩu dưới đây được cấp để sử dụng một lần duy nhất. Hãy gửi mật khẩu này để cho phép khách của bạn mở cửa. Bạn cũng có thể xóa mật khẩu trước khi hết hiệu lực.</string>
    <string name="setting_key">Thiết lập phím</string>
    <string name="delete_device_success">Xóa thiết bị thành công</string>
    <string name="bottom_sheet_camera_information">Xem thông tin Camera</string>
    <string name="bottom_sheet_change_the_camera_name">Đổi tên camera</string>
    <string name="bottom_sheet_update_firm_ware">Cập nhật Firmware</string>
    <string name="bottom_sheet_sd_card_info">Thẻ nhớ</string>
    <string name="string_notification">Thông báo</string>
    <string name="delete_ezviz_camera_fail">Camera không còn tồn tại trong tài khoản này</string>
    <string name="show_title_private_policy">Cập nhật chính sách bảo vệ dữ liệu cá nhân</string>
    <string name="show_title_spread_vt">Đồng chí chưa thực hiện lan tỏa Viettel Home</string>
    <string name="show_content_spread_vt">Vui lòng hoàn thành việc thi đua lan tỏa trước ngày 31/12/2023.</string>
    <string name="show_title_logout_private_policy">Rút lại sự Đồng ý điều khoản và Chính sách sử dụng thành công. Dữ liệu cá nhân của bạn sẽ được xóa trong vòng 72 giờ.</string>
    <string name="show_content_logout_private_policy">Vui lòng liên hệ Hotline 18008168 để mở khóa tài khoản.</string>
    <string name="content_show_title_private_policy">Theo nghị định số 13/2023/NĐ-CP của Chính phủ về Bảo vệ dữ liệu cá nhân, Viettel Home thông báo Điều khoản và chính sách của Viettel Home được cập nhật từ 01/08/2023.</string>
    <string name="allow_app_overlay">Vui lòng cho phép ứng dụng xuất hiện trên cùng</string>
    <string name="request_overlay_description">Cuộc gọi từ camera cần sự cho phép của bạn. Mở cài đặt điện thoại để bật chức năng này.</string>
    <string name="request_do_not_disturb">Vui lòng cho phép ứng dụng quyền thông báo ở chế độ không làm phiền</string>
    <string name="not_showing_again">Không hiển thị lại</string>
    <string name="allow_title">Cho phép</string>
    <string name="conversation">Đàm thoại</string>
    <string name="string_tv_open_location_gps">Cho phép truy cập GPS?</string>
    <string name="string_banner_free">Miễn phí gói lưu trữ Cloud %s ngày trong %s tháng.Nhanh tay Đăng ký trước ngày %s.</string>
    <string name="string_banner_com_expired">Gói lưu trữ Cloud của bạn sắp hết hạn.<font color='#EF1E4A'><u>Gia hạn ngay</u></font> để tiếp tục sử dụng.</string>
    <string name="string_banner_just_expired">Gói lưu trữ Cloud của bạn đã sắp hết hạn. Vui lòng <font color='#EF1E4A'><u>Gia hạn</u></font> để tiếp tục sử dụng.</string>
    <string name="inputLength">%d/%d</string>
    <string name="video_folder">Viettel_Home_Video</string>
    <string name="photo_folder">Viettel_Home_Photo</string>
    <string name="pin_dialog_title">Nhập mã bảo vệ để mở camera</string>
    <string name="camera_view_locked">Video đã được mã hóa</string>
    <string name="btn_cancel">HỦY</string>
    <string name="btn_accepted">Xác nhận</string>
    <string name="string_content_delete_share_device">Bạn sẽ không thể sử dụng thiết bị nếu từ chối nhận chia sẻ</string>
    <string name="string_content_reject_share_device">Bạn sẽ không thể sử dụng thiết bị nếu hủy nhận chia sẻ</string>
    <string name="btn_ok">OK</string>
    <string name="empty_camera">Bạn không có camera nào!</string>
    <string name="empty_playback_video">Không tìm thấy video nào</string>
    <string name="error_verify_pin">Mã xác nhận không chính xác</string>
    <string name="camera_live">● Trực tiếp</string>
    <string name="camera_playback">Xem lại</string>
    <string name="cam_error_msg">%1s. (%2d)</string>
    <string name="dont_have_permission_share">Tài khoản của bạn không có quyền sử dụng tính năng này</string>
    <string name="ptz_limit">Đã đạt đến giới hạn xoay</string>
    <string-array name="video_level">
        <item>Fluent</item>
        <item>SD</item>
        <item>HD</item>
        <item>Full HD</item>
    </string-array>
    <string name="verify_code_title">Video đã được mã hóa, vui lòng nhập mật khẩu. Mật khẩu mặc định là mã xác nhận được ghi trên nhãn thiết bị</string>
    <string name="verify_code_ezviz_title">Video đã bị mã hóa, nhập mật khẩu để xem thiết bị. Mật khẩu mặc định là mã xác nhận của thiết bị được ghi trên nhãn thiết bị. Nếu không có mã xác nhận trên thiết bị của bạn, hãy nhập mã xác nhận mặc định: ABCDEF (chữ in hoa)</string>
    <string name="verify_code_off_title">Vui lòng nhập mật khẩu mã hóa đã kích hoạt tính năng mã hóa. Mật khẩu mặc định là mã xác nhận của thiết bị được ghi trên nhãn thiết bị</string>
    <string name="label_video_encrypted">Video đã được mã hóa</string>
    <string name="ezviz_incorrect_password_title">Mật khẩu mã hóa không chính xác.</string>
    <string name="ezviz_incorrect_password_message">Bạn có thể reset camera để đưa mật khẩu mã hóa về mặc định.</string>
    <string name="label_pan_title_description">Ấn mũi tên để điều khiển các hướng, hoặc nhấn nút tròn chính giữa để camera kích hoạt chế độ dò tìm tự động (Khi một người xuất hiện, camera sẽ tự động theo dõi chuyển động)</string>
    <string name="label_video_history">Xem lịch sử</string>
    <string name="label_record">Ghi hình</string>
    <string name="label_capture_image">Chụp ảnh</string>
    <string name="label_pan_auto">Tự động</string>
    <string name="label_camera_share">Chia sẻ</string>
    <string name="label_camera_library">Thư viện</string>
    <string name="label_camera_multi_screen">Xem nhiều \n màn hình</string>
    <string name="label_camera_defence">Phòng vệ\nchủ động</string>
    <string name="label_btn_definition">SD</string>
    <string name="dialog_feature_not_support">Camera bạn sử dụng chưa hỗ trợ tính năng này.
        Để trải nghiệm tính năng, bạn có thể tham khảo thêm các dòng camera khác</string>
    <string name="label_play_fail">Tải không thành công.\n Vui thử lại hoặc kiểm tra kết nối mạng.</string>
    <string name="label_retry">Thử lại</string>
    <string name="dialog_save_video_success">Video đã lưu thành công.\n Bạn có thể xem lại ở thư viện của điện thoại.</string>
    <string name="dialog_save_photo_success">Ảnh đã lưu thành công.\n Bạn có thể xem lại ở thư viện của điện thoại.</string>
    <string name="dialog_btn_goto_library">Xem thư viện</string>
    <string name="dialog_confirm_save_video">Đã hoàn thành ghi hình.\nBạn có muốn lưu video vào thư viện của điện thoại?</string>
    <string name="dialog_confirm_save_photo">Đã hoàn thành chụp ảnh.\nBạn có muốn lưu ảnh vào thư viện của điện thoại?</string>
    <string name="dialog_btn_save">Lưu</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Hủy</string>
    <string name="label_library">Thư viện</string>
    <string name="label_video">Video</string>
    <string name="label_photo">Ảnh</string>
    <string name="toast_record_video">Đang thực hiện ghi hình</string>
    <string name="tips_scan_code">Vui lòng quét mã QR trên thiết bị \nhoặc sách hướng dẫn sử dụng</string>
    <string name="add_camera_title">Add Camera</string>
    <string name="device_serial">Device serial</string>
    <string name="device_serial_hint">Input the device serial</string>
    <string name="validate_code">Validate code</string>
    <string name="validate_code_hint">Input the validate code</string>
    <string name="open_manual_input"><![CDATA[<font color=\'#FFFFFF\'>Nếu không quét mã QR thành công.\nVui lòng thử </font><font color=\'#BE0A45\'>thủ công ></font>]]></string>
    <string name="save">Save</string>
    <string name="add_share">Thêm chia sẻ</string>
    <string name="receiver_information">Thông tin người nhận</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="shared_list">Danh sách đã chia sẻ</string>
    <string name="next">Tiếp</string>
    <string name="setting_share_camera">Cài đặt quyền</string>
    <string name="choose_access_permission">Lựa chọn quyền truy cập</string>
    <string name="live_streaming">Xem trực tiếp</string>
    <string name="replay">Phát lại</string>
    <string name="warning">Cảnh báo</string>
    <string name="live_chat">Đàm thoại trực tiếp</string>
    <string name="controlPTZ">Điều khiển quay/ nghiêng</string>
    <string name="all_access">Tất cả quyền truy cập</string>
    <string name="not_cancel_default_permission">Không thể hủy quyền mặc định</string>
    <string name="resolution">1x</string>
    <string name="label_video_live_stream">Xem trực tuyến</string>
    <string name="register_cloud_storage_service">Bạn chưa đăng ký dịch vụ lưu trữ đám mây. Vui lòng đăng ký dịch vụ hoặc chuyển sang chế độ thẻ nhớ.</string>
    <string name="register">Đăng ký</string>
    <string name="cloud_storage">Lưu trữ đám mây</string>
    <string name="control_cloud_storage">Tắt/ bật lưu trữ đám mây</string>
    <string name="please_register_cloud_service">Bạn chưa có dung lượng lưu trữ trên đám mây.\nHãy đăng ký để trải nghiệm lưu trữ mọi lúc mọi nơi.</string>
    <string name="vhome_basic">Viettel Home basic</string>
    <string name="content_cloud_service">Chỉ 22.000 VNĐ/tháng cho 7 ngày lưu trữ đám mây và Free dung lượng 3G/4G khi xem lại video trên ứng dụng.</string>
    <string name="help">Trợ giúp</string>
    <string name="contact_with_us">Liên hệ với chúng tôi</string>
    <string name="frequently_question">Câu hỏi thường gặp</string>
    <string name="ezviz_latest_verion_firmware">Thiết bị của bạn đã được cập nhật phiên bản mới nhất</string>
    <string name="ezviz_notification">Thông báo</string>
    <string name="ezviz_not_latest_verion_firmware">Thiết bị của bạn chưa được cập nhật phiên bản mới nhất</string>
    <string name="alert_defendence_function">Chức năng phòng vệ chủ động chỉ hoạt động khi đang xem trực tuyến. Vui lòng trở lại màn hình xem trực tuyến để kích hoạt tính năng.</string>
    <string-array name="frequently_question_list">
        <item>Chế độ kết nối tương thích Compatible mode là gì?</item>
        <item>Chế độ kết nối Bluetooth là gì?</item>
        <item>Quét mã QR là gì?</item>
        <item>Quét mã QR là gì?</item>
        <item>Kết nối tài khoản là gì?</item>
    </string-array>
    <string name="no_memory_card">Không có dữ liệu hiển thị do không tìm thấy thẻ nhớ. Vui lòng kiểm tra và lắp đặt lại thẻ nhớ.</string>
    <string name="speed_video">%dX</string>
    <string name="no_info_device">Không tìm thấy thông tin thiết bị.</string>
</resources>