<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/dimen_20"
    android:background="@drawable/bg_white_corner_28_of_bottom_left"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20">

    <ImageView
        android:id="@+id/ivDescription"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="@dimen/dimen_150"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dialog_notification" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/text_bold_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/allow_app_overlay"
        android:textColor="@color/color_4e4e4e"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/text_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10"
        tools:text="@string/request_overlay_description"
        android:textColor="@color/color_4e4e4e" />

    <LinearLayout
        android:id="@+id/btnNotShowingAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_20">

        <ImageView
            android:id="@+id/ivRadio"
            android:layout_width="@dimen/dimen_15"
            android:layout_height="@dimen/dimen_15"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dimen_5"
            android:src="@drawable/ic_radio_unselected" />

        <TextView
            style="@style/text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/not_showing_again"
            android:textColor="@color/color_4e4e4e" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnRefuse"
            style="@style/CustomButtonGrayRedBorder"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/btnAllow"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/refuse"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toStartOf="@id/btnAllow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnAllow"
            style="@style/CustomButtonRed"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/btnRefuse"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/allow_title"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnRefuse"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>