<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray_corner_12"
        android:padding="@dimen/dimen_15"
        tools:context="com.viettel.vht.device.ui.camera.settingCamera.BottomSheetCameraSetting">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearBottomSheetViewInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:src="@drawable/ic_camera_setting_warning" />

            <TextView
                style="@style/text_bold_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/bottom_sheet_camera_information" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearBottomSheetChangeTheCameraName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearBottomSheetViewInformation">

            <ImageView
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:src="@drawable/ic_camera_setting_change_camera_name" />

            <TextView
                style="@style/text_bold_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/bottom_sheet_change_the_camera_name" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearBottomSheetUpdateFirmWare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearBottomSheetChangeTheCameraName">

            <ImageView
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:src="@drawable/ic_camera_setting_update_firmware" />

            <TextView
                style="@style/text_bold_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/bottom_sheet_update_firm_ware" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>