<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_15"
    android:layout_marginRight="@dimen/dimen_15"
    android:background="@drawable/bg_white_corner_28">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/text_bold_16"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/setting" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginTop="@dimen/dimen_3"
            android:background="@color/color_CECECE"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:id="@+id/radioContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_15"
            android:maxHeight="@dimen/dimen_50"
            app:layout_constraintBottom_toTopOf="@id/functionContainer"
            app:layout_constraintHeight_max="@dimen/dimen_200"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRadios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/functionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioContainer">

            <TextView
                android:id="@+id/btnCancel"
                style="@style/CustomButtonGray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_weight="1"
                android:background="@drawable/bg_button_f5f5f5"
                android:elevation="0dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_24"
                android:paddingTop="@dimen/dimen_12"
                android:paddingRight="@dimen/dimen_24"
                android:paddingBottom="@dimen/dimen_12"
                android:text="@string/cancel"
                android:textColor="@color/color_red_EC0D3A"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/btnConfirm"
                style="@style/CustomButtonRed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_confirm"
                android:elevation="0dp"
                android:enabled="false"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_24"
                android:paddingTop="@dimen/dimen_12"
                android:paddingRight="@dimen/dimen_24"
                android:paddingBottom="@dimen/dimen_12"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>