<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:background="@drawable/bg_white_corner_28_of_bottom_left">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_24"
            android:paddingTop="@dimen/dimen_30"
            android:paddingRight="@dimen/dimen_24"
            android:paddingBottom="@dimen/dimen_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDescription"
                android:layout_width="@dimen/dimen_160"
                android:layout_height="@dimen/dimen_100"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCancel"
                tools:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/text_bold_16"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivDescription"
                tools:text="@string/setting" />

            <TextView
                android:id="@+id/tv_sub_title"
                style="@style/text_16"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="@string/setting" />

            <TextView
                android:id="@+id/btn_confirm"
                style="@style/CustomButtonRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_40"
                android:layout_marginBottom="@dimen/dimen_40"
                android:gravity="center"
                android:minWidth="@dimen/dimen_100"
                android:paddingLeft="@dimen/dimen_24"
                android:paddingTop="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_24"
                android:paddingBottom="@dimen/dimen_10"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white_sdk"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
                tools:ignore="MissingConstraints"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/llOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sub_title">

                <TextView
                    android:id="@+id/btn_cancel"
                    style="@style/CustomButtonGrayNotification"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_5"
                    android:layout_weight="1"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dimen_24"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingRight="@dimen/dimen_24"
                    android:paddingBottom="@dimen/dimen_12"
                    android:text="@string/refuse"
                    android:textAllCaps="true"
                    android:textColor="@color/color_EC0D3A"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/btn_agree"
                    style="@style/CustomButtonRed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dimen_5"
                    android:layout_weight="1"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dimen_24"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingRight="@dimen/dimen_24"
                    android:paddingBottom="@dimen/dimen_12"
                    android:text="@string/agree"
                    android:textAllCaps="true"
                    android:textColor="@color/white_sdk"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>